# recsys-movielens

./: .gitignore  README.md  pyproject.toml  recsys-movielens.code-workspace
configs/: config.yaml  config_mf.yaml
launchers/: 01_overfit_batch.sh  02_run_lr_finder.sh  03_find_embedding_size.sh  04_brute_force.sh
notebooks/: datasets.ipynb  exploratory_analysis.ipynb  interpreting_embeddings.ipynb  load_checkpoint.ipynb  plot_loss.ipynb
src/: inference.py  main_cli.py  sweeper.py  train.py
src/datasets/: movielens.py  movielens_mnist.py  utils.py
src/lit_models/: base.py
src/models/: mf.py  mf_with_bias.py  neu_mf.py
src/plotting/: plot_csv_logger.py
src/preparation/: io.py  preprocessing.py  train_test_split.py
