[tool.poetry]
name = "recsys-movielens"
version = "0.0.1"
description = "Recommender systems using Movielens dataset"
authors = ["Carlos Espeleta"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
torch = "^2.0.0"
torchvision = "^0.15.1"
lightning = "^2.0.2"
setuptools = "^67.7.2"
wheel = "^0.40.0"
requests = "^2.29.0"
dynaconf = "^3.1.12"
jsonargparse = {version = "^4.21.0", extras = ["signatures"]}
omegaconf = "^2.3.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"
matplotlib = "^3.7.1"
black = "^23.3.0"
scikit-learn = "^1.2.2"
torchmetrics = "^0.11.4"
tensorboard = "^2.13.0"
torch-tb-profiler = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
